# cargo-features = ["edition2021"]

[package]
name = "ch02-00-guessing-game-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"

[[bin]]
name = "ch02-00-guessing-game-tutorial"
path = "ch02-00-guessing-game-tutorial.rs"
